# stdd-demo

./: .gitignore  README.md  pyproject.toml
docs/: stdd-workflow-log.md
openspec/: config.yaml
openspec/changes/add-todo-crud/: .openspec.yaml  brainstorm.md  design.md  plan.md  proposal.md  tasks.md
openspec/changes/add-todo-crud/specs/todo-crud/: spec.md
openspec/schemas/stdd/: schema.yaml
openspec/schemas/stdd/templates/: brainstorm.md  design.md  plan.md  proposal.md  spec.md  tasks.md
src/: app.py  models.py  store.py
src/routes/: todos.py
tests/: conftest.py  test_health.py  test_models.py  test_store.py  test_todos.py
